recipe index.html links done

--- a/recipe_app/app/views/layouts/application.html.erb
+++ b/recipe_app/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav>
+  <span><a href = "/recipes">All Recipes</a></span>
+  <span><a href = "/courses">All Courses</a></span>
+</nav>
 
 <%= yield %>
 
