--- a/recipe_app/app/views/recipes/new.html.erb
+++ b/recipe_app/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
 <h1>This is page for "new"</h1>
+
+<form action="" method="">
+  <label>Course Name</label>
+  <input>
+  <label>Instruction</label>
+  <input type="">
+  <label>Serving</label>
+  <input type="text">
+
+</form>
+
+<%= render 'form' %>
