created new form. 'create' not working

--- a/recipe_app/app/views/recipes/new.html.erb
+++ b/recipe_app/app/views/recipes/new.html.erb
@@ -1,13 +1,12 @@
 <h1>This is page for "new"</h1>
 
-<form action="" method="">
+<form action="/recipes" method="post">
   <label>Course Name</label>
   <input>
   <label>Instruction</label>
-  <input type="">
+  <input>
   <label>Serving</label>
-  <input type="text">
-
+  <input>
+  <input type="submit" value="Create">
 </form>
 
-<%= render 'form' %>
