recipe show controller method and its html is done

--- a/recipe_app/app/views/recipes/show.html.erb
+++ b/recipe_app/app/views/recipes/show.html.erb
@@ -1,1 +1,17 @@
 <h1>This is page for "show"</h1>
+
+<ul>
+  <li>
+    <strong>Recipe Name:</strong>
+    <%= @recipe.name %>
+  </li>
+  <li>
+    <strong>Instructions:</strong>
+    <%= @recipe.instructions %>
+  </li>
+  <li>
+    <strong>Serving:</strong>
+    <%= @recipe.servings %>
+  </li>
+
+</ul>
