recipe edit html done but cannot show the page

--- a/recipe_app/app/views/recipes/edit.html.erb
+++ b/recipe_app/app/views/recipes/edit.html.erb
@@ -1,1 +1,11 @@
 <h2>This is edit page for recipe</h2>
+
+<form action="/recipes" method="post">
+  <label>Course Name</label>
+  <input>
+  <label>Instruction</label>
+  <input>
+  <label>Serving</label>
+  <input>
+  <input type="submit" value="Edit">
+</form>
