add update not sure if it works

--- a/recipe_app/app/views/recipes/edit.html.erb
+++ b/recipe_app/app/views/recipes/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>This is edit page for recipe</h2>
 
-<form action="/recipes" method="post">
+<form action="/recipes/<%=recipe.id%>" method="post">
   <label>Course Name</label>
   <input>
   <label>Instruction</label>
