denis fixed all bugs version

--- a/recipe_app/app/views/recipes/edit.html.erb
+++ b/recipe_app/app/views/recipes/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>This is edit page for recipe</h2>
 
-<form action="/recipes/<%=recipe.id%>" method="post">
+<!-- <form action="/recipes/<!%= @recipe.id%>" method="put">
   <label>Course Name</label>
   <input>
   <label>Instruction</label>
@@ -8,4 +8,23 @@
   <label>Serving</label>
   <input>
   <input type="submit" value="Edit">
-</form>
+</form> -->
+
+<%= form_for @recipe, {method: "put"} do |f|%>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :instructions %>
+    <%= f.text_area :instructions %>
+  </div>
+  <div class="field">
+    <%= f.label :servings %>
+    <%= f.number_field :servings %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit%>
+  </div>
+<% end %>
