--- a/recipe_app/app/views/recipes/edit.html.erb
+++ b/recipe_app/app/views/recipes/edit.html.erb
@@ -10,7 +10,7 @@
   <input type="submit" value="Edit">
 </form> -->
 
-<%= form_for @recipe, {method: "put"} do |f|%>
+<%= form_for @recipe, method: "put" do |f|%>
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
